# akonadi-ews

./: CHANGELOG  CMakeLists.txt  Messages.sh  README.md  config.h.cmake  configdialog.cpp  configdialog.h  configdialog.ui  ewsautodiscoveryjob.cpp  ewsautodiscoveryjob.h  ewsconfig.h.cmake  ewscreateitemjob.cpp  ewscreateitemjob.h  ewsfetchcalendardetailjob.cpp  ewsfetchcalendardetailjob.h  ewsfetchfoldersincrjob.cpp  ewsfetchfoldersincrjob.h  ewsfetchfoldersjob.cpp  ewsfetchfoldersjob.h  ewsfetchitemdetailjob.cpp  ewsfetchitemdetailjob.h  ewsfetchitemsjob.cpp  ewsfetchitemsjob.h  ewsfetchmaildetailjob.cpp  ewsfetchmaildetailjob.h  ewsitemhandler.cpp  ewsitemhandler.h  ewsmodifyitemflagsjob.cpp  ewsmodifyitemflagsjob.h  ewsmodifyitemjob.cpp  ewsmodifyitemjob.h  ewsmtaresource.cpp  ewsmtaresource.desktop  ewsmtaresource.h  ewsmtaresource.kcfg  ewsresource.cpp  ewsresource.desktop  ewsresource.desktop.cmake  ewsresource.h  ewsresource.h.cmake  (+19 more)
abchperson/: ewsabchpersonhandler.cpp  ewsabchpersonhandler.h  ewscreateabchpersonjob.cpp  ewscreateabchpersonjob.h  ewsfetchabchpersondetailjob.cpp  ewsfetchabchpersondetailjob.h  ewsmodifyabchpersonjob.cpp  ewsmodifyabchpersonjob.h
calendar/: ewscalendarhandler.cpp  ewscalendarhandler.h  ewscreatecalendarjob.cpp  ewscreatecalendarjob.h  ewsfetchcalendardetailjob.cpp  ewsfetchcalendardetailjob.h  ewsmodifycalendarjob.cpp  ewsmodifycalendarjob.h
cmake/modules/: FindXsltproc.cmake
contact/: ewscontacthandler.cpp  ewscontacthandler.h  ewscreatecontactjob.cpp  ewscreatecontactjob.h  ewsfetchcontactdetailjob.cpp  ewsfetchcontactdetailjob.h  ewsmodifycontactjob.cpp  ewsmodifycontactjob.h
ewsclient/: CMakeLists.txt  ewsattachment.cpp  ewsattachment.h  ewsattendee.cpp  ewsattendee.h  ewscalendarfolder.cpp  ewscalendarfolder.h  ewsclient.cpp  ewsclient.h  ewsclient_debug.cpp  ewsclient_debug.h  ewscontactsfolder.cpp  ewscontactsfolder.h  ewscreatefolderrequest.cpp  ewscreatefolderrequest.h  ewscreateitemrequest.cpp  ewscreateitemrequest.h  ewsdeletefolderrequest.cpp  ewsdeletefolderrequest.h  ewsdeleteitemrequest.cpp  ewsdeleteitemrequest.h  ewseffectiverights.cpp  ewseffectiverights.h  ewseventrequestbase.cpp  ewseventrequestbase.h  ewsfindfolderrequest.cpp  ewsfindfolderrequest.h  ewsfinditemrequest.cpp  ewsfinditemrequest.h  ewsfolder.cpp  ewsfolder.h  ewsfolderbase.cpp  ewsfolderbase.h  ewsfolderbase_p.h  ewsfolderid.cpp  ewsfolderid.h  ewsfoldershape.cpp  ewsfoldershape.h  ewsgeteventsrequest.cpp  ewsgeteventsrequest.h  (+65 more)
mail/: ewscreatemailjob.cpp  ewscreatemailjob.h  ewsfetchmaildetailjob.cpp  ewsfetchmaildetailjob.h  ewsmailhandler.cpp  ewsmailhandler.h  ewsmodifymailjob.cpp  ewsmodifymailjob.h
tags/: ewsakonaditagssyncjob.cpp  ewsakonaditagssyncjob.h  ewsglobaltagsreadjob.cpp  ewsglobaltagsreadjob.h  ewsglobaltagswritejob.cpp  ewsglobaltagswritejob.h  ewstagstore.cpp  ewstagstore.h  ewsupdateitemstagsjob.cpp  ewsupdateitemstagsjob.h
task/: ewscreatetaskjob.cpp  ewscreatetaskjob.h  ewsfetchtaskdetailjob.cpp  ewsfetchtaskdetailjob.h  ewsmodifytaskjob.cpp  ewsmodifytaskjob.h  ewstaskhandler.cpp  ewstaskhandler.h
test/: CMakeLists.txt  basictest.cpp  basictest.qrc  ewstest.cpp  isolatedtestbase.cpp  isolatedtestbase.h  statemonitor.cpp  statemonitor.h
test/fakeserver/: CMakeLists.txt  fakeewsconnection.cpp  fakeewsconnection.h  fakeewsserver.cpp  fakeewsserver.h  fakeewsserver_debug.cpp  fakeewsserver_debug.h  fakeewsserverthread.cpp  fakeewsserverthread.h
test/fakeserver/test/: CMakeLists.txt  ewsfakesrv_test.cpp
test/resources/: getfolder-inbox-msgroot.xq  getfolder-specialfolders.xq  getfolder-subscribedfolders.xq  getfolder-tags.xq  subscribe-streaming.xq  syncfolderhierarhy-emptystate.xq  unsubscribe.xq
test/testenv/: config.xml.cmake
test/testenv/kdehome/share/config/: akonadi-firstrunrc  kdebugrc
test/testenv/xdgconfig/akonadi/: akonadiserverrc
test/testenv/xdglocal/: .keep
test/unittests/: CMakeLists.txt  ewsattachment_ut.cpp  ewsdeleteitemrequest_ut.cpp  ewsgetitemrequest_ut.cpp  ewsmoveitemrequest_ut.cpp  ewsunsubscriberequest_ut.cpp  fakehttppost.h  faketransferjob.cpp  faketransferjob.h
